Agrego funcionalidad de modificar necesidad

--- a/WebApp/Views/Home/pv_Buscador.cshtml
+++ b/WebApp/Views/Home/pv_Buscador.cshtml
@@ -1,4 +1,4 @@
-﻿<form action="./Home/BuscarPorNombre" class="row">
+﻿<form action="/Home/BuscarPorNombre" class="row">
     <div class="search-wrapper">
         <input id="search" name="nombre" placeholder="Buscar por nombre" class="col s10 m5">
         <i class="material-icons search-icon">search</i>
