--- a/WebApp/Views/Necesidad/ModificarNecesidad.cshtml
+++ b/WebApp/Views/Necesidad/ModificarNecesidad.cshtml
@@ -10,124 +10,20 @@
 <div>
 
     <div class="row" id="crear-necesidad-container">
-        <form class="" action="./AltaNecesidad">
+        <form class="" action="./RealizarModificacion">
             <div class="col s12 l8 push-l2">
 
                 <h2>Modificar Necesidad</h2>
-
-                <div class="input-field col s5">
-                    @Html.EditorFor(o => o.IdNecesidad, new { @type = "hidden", @readonly = "readonly", @value = ViewBag.necesidad.IdNecesidad})
-                </div>
-
-
-                <div class="input-field col s5">
-                    @Html.LabelFor(o => o.Nombre)
-                    @Html.EditorFor(o => o.Nombre)
-                    @Html.ValidationMessageFor(o => o.Nombre)
-                </div>
-
-                <div class="input-field push-s1 col s5">
-                    @Html.LabelFor(o => o.TelefonoContacto)
-                    @Html.EditorFor(o => o.TelefonoContacto)
-                    @Html.ValidationMessageFor(o => o.TelefonoContacto)
-                </div>
-
-                <div class="input-field col s12">
-                    @Html.LabelFor(o => o.Descripcion)
-                    @Html.EditorFor(o => o.Descripcion)
-                    @Html.ValidationMessageFor(o => o.Descripcion)
-                </div>
-
-                <div class="input-field col s12">
-                    <input id="FechaFin" name="FechaFin" type="text" class="datepicker form-control col s2" />
-                    <label for="fechaFin">Fecha fin</label>
-                </div>
-
-                <div class="input-field col s12">
-                    <input type="text" class="nombre-insumo-agregar form-control col s5" placeholder="Nombre Insumo" />
-                    <input type="number" class="cantidad-insumo-agregar form-control col s5 push-s1" placeholder="Cantidad" />
-                </div>
-
-                <div id="campos-monetaria-container" style="display:none;">
-                    <div class="input-field col s12">
-                        @Html.Label("Monto")
-                        @Html.EditorFor(o => o.NecesidadDonacionMonetaria.Dinero)
-                        @Html.ValidationMessageFor(o => o.NecesidadDonacionMonetaria.Dinero)
-                    </div>
-                    <div class="input-field col s12">
-                        @Html.LabelFor(o => o.NecesidadDonacionMonetaria.CBU)
-                        @Html.EditorFor(o => o.NecesidadDonacionMonetaria.CBU)
-                        @Html.ValidationMessageFor(o => o.NecesidadDonacionMonetaria.CBU)
-                    </div>
-                </div>
-
-                <div id="campos-insumos-container" style="display:none;" class="col s12">
-
-                    <div class="input-field col s12" id="insumos-cargados-container">
-                        <div class="insumo-container-template" style="display:block;">
-                            <div class="nombre-insumo-cargado input-field col s5">
-                                @Html.EditorFor(o => o.NecesidadesDonacionesInsumos[0].Nombre)
-                            </div>
-                            <div class="cantidad-insumo-cargado input-field col s5">
-                                @Html.EditorFor(o => o.NecesidadesDonacionesInsumos[0].Cantidad)
-                            </div>
-                            <div class="input-field col s1">
-                                <img class="button-delete-insumo" src="~/Images/Necesidad/Basura.png" alt="Borrar Necesidad" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="input-field col s12">
-                        <input type="text" class="nombre-insumo-agregar form-control col s5" placeholder="Nombre Insumo" />
-                        <input type="number" class="cantidad-insumo-agregar form-control col s5 push-s1" placeholder="Cantidad" />
-                    </div>
-
-                    <div class="input-field col s6 push-s6">
-                        <button type="button" id="button-agregar-insumo" class="btn btn-primary col s7 l5 push-s3 push-l5">Agregar Insumo</button>
-                    </div>
-
-                </div>
-
-                <!-- Wrapper -->
-                <div class="col s12"></div>
-                <!-- Wrapper -->
-
-                <div id="datos-referencias-container">
-                    @{
-                        for (int i = 0; i < 2; i++)
-                        {
-                            <div class="input-field col s12 m6">
-                                @Html.LabelFor(o => o.Referencia[i].Nombre)
-                                @Html.EditorFor(o => o.Referencia[i].Nombre)
-                                @Html.ValidationMessageFor(o => o.Referencia[i].Nombre)
-                            </div>
-                            <div class="input-field col s12 m6">
-                                @Html.LabelFor(o => o.Referencia[i].Telefono)
-                                @Html.EditorFor(o => o.Referencia[i].Telefono)
-                                @Html.ValidationMessageFor(o => o.Referencia[i].Telefono)
-                            </div>
-                        }
+                @{
+                    if (ViewBag.errorMessage != null)
+                    {
+                        <h3 class="msg-error">@ViewBag.errorMessage</h3>
+                    } else
+                    {
+                        @Html.Partial("_pvCamposModificacion", Model);
                     }
-                </div>
+                }
 
-                <div class="input-field col s6 l4">
-                    <label>Asdasda</label>
-                    <div class="file-field input-field">
-                        <div class="btn btn-primary">
-                            <span>Buscar</span>
-                            <input id="Foto" name="Foto" accept="image/*" type="file" required />
-                        </div>
-
-                        <div class="file-path-wrapper">
-                            <input class="file-path validate col s12" type="text" placeholder="Seleccione un archivo" />
-                            @Html.ValidationMessageFor(o => o.Foto)
-                        </div>
-                    </div>
-                </div>
-
-                <div class="input-field col s12">
-                    <button class="btn btn-primary col s3 push-s8 push-l8">Agregar Necesidad</button>
-                </div>
             </div>
         </form>
     </div>
