Muestra bien la peticion al Servicio API

--- a/WebApp/Views/MisDonaciones/Inicio.cshtml
+++ b/WebApp/Views/MisDonaciones/Inicio.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Models.Partial
+@model List<DonacionHistorialMetaData>
+
 @{
     ViewBag.Title = "Inicio";
     Layout = "~/Views/Shared/_UsuarioLayout.cshtml";
@@ -23,26 +25,19 @@
                     <th>MI DONACION</th>
                 </tr>
             </thead>
-
-            <tbody>
-                <tr>
-                    <td>27/03/2020</td>
-                    <td>Apoya al Hopital Britanico</td>
-                    <td>Monetario</td>
-                    <td>Activo</td>
-                    <td>$10000 / $20000</td>
-                    <td>$500</td>
-                    <td>Detalle</td>
-                </tr>
-                <tr>
-                    <td>22/04/2020</td>
-                    <td>Comedor Carlos Mujica</td>
-                    <td>Insumo</td>
-                    <td>Cerrado</td>
-                    <td>8 / 10</td>
-                    <td>2</td>
-                    <td>Detalle</td>
-                </tr>
+            <tbody>                
+                @foreach (var donacion in Model)
+                {
+                    <tr>
+                        <td>@donacion.Fecha</td>
+                        <td>@donacion.Nombre</td>
+                        <td>@donacion.Tipo</td>
+                        <td>@donacion.Estado</td>
+                        <td>@donacion.TotalRecaudado</td>
+                        <td>@donacion.MiDonacion</td>
+                        <td><a href="#">Detalle</a></td>
+                    </tr>
+                }
             </tbody>
         </table>
     </div>
