--- a/WebApp/Views/Perfil/Inicio.cshtml
+++ b/WebApp/Views/Perfil/Inicio.cshtml
@@ -13,9 +13,7 @@
         <hr />
     </div>
     <div class="col s12 m4 l4 offset-m8 offset-l8">
-        <button class="btn waves-effect waves-light col s12 m12 l12 blue darken-3" id="btnMisDonaciones">
-            MIS DONACIONES
-        </button>
+        <a class="btn waves-effect waves-light col s12 m12 l12 blue darken-3" href="/MisDonaciones/Inicio">MIS DONACIONES</a>      
     </div>
     <div class="row contenedor-perfil">
         <form method="post" action="/Perfil/Inicio" enctype="multipart/form-data">
