Modificacion de Tabla Denuncias

--- a/WebApp/Views/Denuncia/pv_DenunciaComentarios.cshtml
+++ b/WebApp/Views/Denuncia/pv_DenunciaComentarios.cshtml
@@ -9,10 +9,7 @@
     </div>
     <div class="col S12 m12 l12">
         <ul class="collection with-header">
-            @foreach (var item in @Model.Comentarios)
-            {
-                <li class="collection-item">@item.Descripcion</li>
-            }
+            <li class="collection-item">@Model.Cometario</li>
         </ul>
     </div>
 </div>
