--- a/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
+++ b/WebApp/Views/Denuncia/pv_CardDenuncias.cshtml
@@ -15,7 +15,7 @@
             <div class="col s12 m4 l4">
                 <a id="btnComentarios" class="btn blue waves-effect waves-light white-text modal-trigger"
                    onclick='VerComentarios("/Denuncia/VerComentarios/@Model.IdDenuncia")'
-                   href="#modalComentarios">COMENTARIOS</a>
+                   href="#modalComentarios">COMENTARIO</a>
             </div>
             <div class="col s12 m12 l12 btn-action">
                 <a class="btn grey waves-effect waves-light white-text modal-trigger" 
