--- a/WebApp/Views/Necesidad/_pvCamposCreacion.cshtml
+++ b/WebApp/Views/Necesidad/_pvCamposCreacion.cshtml
@@ -26,7 +26,7 @@
 </div>
 
 <div class="input-field col s12">
-    @Html.EditorFor(o => o.FechaFin)
+    @Html.EditorFor(o => o.FechaFin, new { htmlAttributes = new { @class = "validate datepicker" } })
     @Html.ValidationMessageFor(o => o.FechaFin)
 </div>
 
