Mostrar detalle de necesidad

--- a/WebApp/Views/MisNecesidades/Inicio.cshtml
+++ b/WebApp/Views/MisNecesidades/Inicio.cshtml
@@ -13,8 +13,8 @@
             <hr />
         </div>
         <p class="s12 m12 l12">
-            <label>                
-                <input id="cbActivas" type="checkbox" class="filled-in" value="visualizar-activos" checked="checked" onclick="CambiarActivas()"/>
+            <label>
+                <input id="cbActivas" type="checkbox" class="filled-in" value="visualizar-activos" checked="checked" onclick="CambiarActivas()" />
                 <span>Solo visualizar activas</span>
             </label>
         </p>
@@ -32,7 +32,7 @@
                 }
             </div>
         </div>
-           
 
-        
+        <div id="modalDetalle" class="modal modal-fixed-footer"></div>
+
     </div>
