--- a/WebApp/Views/MisNecesidades/pv_CardMisNecesidades.cshtml
+++ b/WebApp/Views/MisNecesidades/pv_CardMisNecesidades.cshtml
@@ -17,18 +17,13 @@
                 <p>Total donado: $5000 de $10000</p>
             </div>
             <div class="col s12 m12 l12">
-                @if (Model.Valoracion != null)
-                {
-                    @Html.Partial("pv_ProgressBar", (Decimal)Model.Valoracion)
-                }
-                else
-                {
-                    @Html.Partial("pv_ProgressBar", Decimal.Zero)
-                }
+                @Html.Partial("pv_ProgressBar", Model)
             </div>
             <div class="card-action col s12 m12 l12">
                 <a class="white-text" href="#">EDITAR</a>
-                <a class="white-text" href="#">DETALLE</a>
+                <a class="white-text modal-trigger"
+                   onclick='VerDetalle("/MisNecesidades/VerDetalle/@Model.IdNecesidad")'
+                   href="#modalDetalle">Detalle</a>
             </div>
         </div>      
     </div>
