Fix Progress Bar y Editar

--- a/WebApp/Views/MisNecesidades/Inicio.cshtml
+++ b/WebApp/Views/MisNecesidades/Inicio.cshtml
@@ -34,5 +34,5 @@
         </div>
 
         <div id="modalDetalle" class="modal modal-fixed-footer"></div>
-
+        <div id="modalEditar" class="modal modal-fixed-footer"></div>
     </div>
