--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -1,14 +1,24 @@
-﻿@model decimal
+﻿@{ 
+    Models.ORM.Necesidades necesidad = Model;
+}
 
 <div class="col s12 m6 l6">
     <div class="card horizontal light-blue darken-3 white-text">
         <div class="card-stacked">
             <div class="card-content">
-                <h6>TITULO DE PUBLICACION</h6>
+                <h6>@necesidad.Nombre</h6>
                 <p>Nombre de usuario</p>
-                <p>Fecha de creacion</p>
+                <p>@necesidad.FechaCreacion</p>
                 <p>
-                    @Html.Partial("pv_ProgressBar", Model)
+                    @{
+                        if (Model.Valoracion == null)
+                        {
+                            Html.Partial("pv_ProgressBar", 0M);
+                        } else
+                        {
+                            Html.Partial("pv_ProgressBar", (decimal) Model.Valoracion);
+                        }
+                    }
                 </p>
             </div>
             <div class="card-action right-align">
