--- a/WebApp/Views/MisNecesidades/pv_NecesidadModificar.cshtml
+++ b/WebApp/Views/MisNecesidades/pv_NecesidadModificar.cshtml
@@ -7,6 +7,7 @@
         <div class="col m12 l12">
             <h3>EDITAR</h3>
         </div>
+        <input type="hidden" name="IdNecesidad" value="@Model.IdNecesidad">
         <div class="col m6 l6">
             <span class="bold">Nombre: </span>
             <h4>@Html.TextBoxFor(m => m.Nombre, "", new { @class = "helper-text" })</h4>
@@ -17,7 +18,7 @@
         </div>
         <div class="col m12 l12">
             <span class="bold">Fecha de creacion: </span>
-            @Html.TextBoxFor(m => m.FechaCreacion.Date, "{0:dd/MM/yyyy}", new { @class = "helper-text", name = "fechacreacion", id = "icon_date_range" })
+            @Html.TextBoxFor(m => m.FechaCreacion.Date, "{0:dd/MM/yyyy}", new { @class = "helper-text", name = "fechacreacion", id = "icon_date_range", disabled = "true" })
         </div>
         <div class="col m12 l12">
             <span class="bold">Fecha de fin: </span>
