--- a/WebApp/Views/Necesidad/_pvCamposDetalle.cshtml
+++ b/WebApp/Views/Necesidad/_pvCamposDetalle.cshtml
@@ -5,8 +5,22 @@
 <h2>@Html.DisplayFor(model => model.Nombre)</h2>
 
 <div>
-    @Html.DisplayName("Creador")
+    @Html.DisplayName("Creador: ")
     @Html.DisplayFor(model => model.Usuarios.UserName)
+</div>
+
+<div>
+    @Html.DisplayName("Valoracion: ")
+    @{
+        if (Model.Valoracion == 0)
+        {
+            <span>No hay valoraciones</span>
+        }
+        else
+        {
+            <span>@(Model.Valoracion*100)%</span>
+        }
+    }
 </div>
 
 <div>
@@ -31,21 +45,50 @@
 
 <div>
     @Html.DisplayName("Estado")
-    @Html.DisplayFor(model => model.Estado)
+    @{
+        if (Model.Estado == 1)
+        {
+            <span>Activa</span>
+        }
+        else
+        {
+            <span>Inactiva</span>
+        }
+    }
 </div>
 
 <div>
     @Html.DisplayName("Referencias")
     @{
-        for(int i = 0; i < Model.NecesidadesReferencias.Count(); i++)
+        for (int i = 0; i < Model.NecesidadesReferencias.Count(); i++)
         {
-        <div>
-            @Html.DisplayFor(model => model.NecesidadesReferencias.ElementAt(i).Nombre)
-            @Html.DisplayFor(model => model.NecesidadesReferencias.ElementAt(i).Telefono)
-        </div>
+            <div>
+                @Html.DisplayFor(model => model.NecesidadesReferencias.ElementAt(i).Nombre)
+                @Html.DisplayFor(model => model.NecesidadesReferencias.ElementAt(i).Telefono)
+            </div>
         }
     }
 </div>
+
+@{
+    if (Model.TipoDonacion == 1)
+    {
+    <div>
+        @Model.NecesidadesDonacionesMonetarias.ElementAt(0).CBU
+        @Model.NecesidadesDonacionesMonetarias.ElementAt(0).Dinero
+    </div>
+    }
+    else
+    {
+        foreach (Models.ORM.NecesidadesDonacionesInsumos insumo in Model.NecesidadesDonacionesInsumos)
+        {
+            <div>
+                @insumo.Nombre
+                @insumo.Cantidad
+            </div>
+        }
+    }
+}
 
 
 
@@ -67,13 +110,13 @@
             <div class="input-field col s12">
                 <a class="btn btn-success col s3">Me gusta</a>
                 <a class="btn btn-danger col s3 push-s1">No me gusta</a>
-                <a class="btn btn-primary col s3 push-s1">Donar</a>
+                <a id="donar-button" class="btn btn-primary col s3 push-s1">Donar</a>
                 <a class="btn btn-danger col s3 push-s1" onclick="document.getElementById('form-denuncia-container').classList.remove('hiddendiv')">Denunciar</a>
             </div>
         }
     }
 
-    <div id="form-denuncia-container" class="hiddendiv">
+    <div id="form-denuncia-container" class="">
         <form action="./AgregarDenuncia">
             <input name="idNecesidad" id="idNecesidad" type="hidden" value="@Model.IdNecesidad" readonly />
             <!--Ponerle los motivos de denuncia-->
