Agrego link a detalle necesidad en las cards

--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -22,7 +22,7 @@
                 </p>
             </div>
             <div class="card-action right-align">
-                <a class="white-text" href="#">Detalle</a>
+                <a class="white-text" href="/necesidad/detalleNecesidad?idNecesidad=@necesidad.IdNecesidad">Detalle</a>
             </div>
         </div>
         <div class="card-image">
