--- a/WebApp/Views/Home/pv_CardMasValorada.cshtml
+++ b/WebApp/Views/Home/pv_CardMasValorada.cshtml
@@ -7,7 +7,7 @@
         <div class="card-stacked">
             <div class="card-content">
                 <h6>@necesidad.Nombre</h6>
-                <p>Nombre de usuario</p>
+                <p>@necesidad.Usuarios.UserName</p>
                 <p>@necesidad.FechaCreacion</p>
                 <p>
                     @{
