--- a/WebApp/Content/site.css
+++ b/WebApp/Content/site.css
@@ -39,3 +39,11 @@ footer {
 .mostrar{
     display: block;
 }
+
+body {
+    background-color: #eeeeee;
+}
+
+.content-error {
+    margin-top: 10%;
+}
